...
                                        android:layout_height="30dp"
                                        android:src="@drawable/ic_calendar"

                                />

                                <TextView
                                        android:id="@+id/date_from"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:singleLine="true"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="10dp"
...
                                        android:layout_height="30dp"
                                        android:src="@drawable/ic_time"

                                />

                                <TextView
                                        android:id="@+id/time_from"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:singleLine="true"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="10dp"
...
                                        android:layout_height="30dp"
                                        android:src="@drawable/ic_time"

                                />

                                <TextView
                                        android:id="@+id/time_to"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginEnd="10dp"
                                        android:fontFamily="sans-serif-medium"
...
                android:layout_gravity="bottom|start"
                android:layout_margin="16dp"
                app:backgroundTint="@color/black"
                app:layout_anchorGravity="bottom|left|start" />

        <Button
                android:id="@+id/ic_time_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/results_button"
                android:text="SHOW RESULTS"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end|center_vertical"
...
