...

            </androidx.appcompat.widget.Toolbar>



            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
                 android:layoutAnimation="@anim/layout_animation"
                 android:layout_below="@+id/toolbar_multi_selection_list"
                 android:background="@color/white"/>
...

    </RelativeLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ic_multi_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_white"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/black"
            android:layout_margin="16dp"
...
