...
                                android:textColor="@color/radio_flat_text_selector"
                                android:layout_marginStart="50dp"
                                android:layout_marginEnd="50dp"
                                android:layout_marginTop="30dp"/>

                        <RadioButton
                                android:id="@+id/radio2"
                                android:gravity="center"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/round_frequency_button"
                                android:button="@android:color/transparent"
                                android:text="@string/more_tv"
...
                android:layout_gravity="bottom|start"
                android:layout_margin="16dp"
                app:backgroundTint="@color/black"
                app:layout_anchorGravity="bottom|left|start" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ic_priority_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward_white"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:backgroundTint="@color/black"
...
